# claude-code-gateway

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.yaml  pyproject.toml  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: configuration.md  providers.md  releasing.md  repository-review.md
examples/providers/: anthropic.yaml  azure-openai.yaml  ollama.yaml  openai.yaml  openrouter.yaml  vertex-ai.yaml
scripts/: claude.ps1  claude.sh  setup.ps1  setup.sh
src/claude_code_gateway/: __init__.py  cli.py
tests/: test_cli.py
