[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-gateway"
version = "1.0.0"
description = "A local LiteLLM gateway that connects Claude Code to Google Gemini and other providers."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Claude Code Gateway contributors" }]
keywords = ["claude-code", "gemini", "litellm", "llm-gateway"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "litellm[proxy]==1.93.0",
  "python-dotenv==1.2.2",
  "PyYAML>=6.0.2,<7",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=4.6,<5",
  "pytest>=9.1.1,<10",
  "pytest-cov>=7.1,<8",
  "ruff>=0.15.21,<0.16",
]

[project.scripts]
claude-gateway = "claude_code_gateway.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers -q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
